--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>              
               <article>
@@ -165,8 +165,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Basic</p>
+                  <h3>React JS</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
